--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         <activity
             android:name=".UI.BuyingProducts"
             android:label="@string/title_activity_buying_products"
-            android:theme="@style/Theme.SneakersAlert" />
+            android:theme="@style/Theme.SneakersAlert.NoActionBar" />
         <activity
             android:name=".SearchFragment"
             tools:ignore="Instantiatable" />
@@ -25,9 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.login.ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
