--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,8 @@ dependencies {
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.tfcporciuncula:phonemoji:1.0.0'
+    //Country Picker
+    implementation 'com.github.inpossoft:CountryCodePickerProject:2.0.0'
+
+
 }
