--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-auth:20.0.3'
+
     //noinspection GradleCompatible
     def fragment_version = "1.3.3"
 
@@ -90,7 +92,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.tfcporciuncula:phonemoji:1.0.0'
     //Country Picker
-    implementation 'com.github.inpossoft:CountryCodePickerProject:2.0.0'
+    implementation 'com.hbb20:AndroidCountryPicker:0.0.1'
+
 
 
 }
