--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.sneakersalert">
-
     <application
         android:allowBackup="true"
         android:name="androidx.multidex.MultiDexApplication"
@@ -11,6 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:theme="@style/Theme.SneakersAlert">
         <activity android:name=".ui.payment.Checkout" />
         <activity
