--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,9 @@ android {
 
     buildTypes {
         release {
+            signingConfig signingConfigs.debug
             minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -43,6 +45,7 @@ android {
 dependencies {
 
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
 
     //noinspection GradleCompatible
     def fragment_version = "1.3.3"
@@ -68,10 +71,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.annotation:annotation:1.2.0'
     testImplementation 'junit:junit:4.13.2'
-    implementation'com.google.android.gms:play-services-wallet:18.1.2'
+    implementation'com.google.android.gms:play-services-wallet:18.1.3'
     implementation 'com.google.android.material:material:1.3.0'
     android.defaultConfig.vectorDrawables.useSupportLibrary = true
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -89,13 +92,27 @@ dependencies {
     implementation "com.android.billingclient:billing:$billing_version"
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation platform('com.google.firebase:firebase-bom:27.1.0')
-
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.tfcporciuncula:phonemoji:1.0.0'
     //Country Picker
     implementation 'com.hbb20:AndroidCountryPicker:0.0.1'
+    //Payment
+    implementation "com.adyen.checkout:ideal-ui:3.8.0"
+    implementation "com.adyen.checkout:drop-in:3.8.0"
+    implementation 'com.paypal.sdk:paypal-android-sdk:2.14.2'
+    implementation "com.adyen.checkout:card-ui:3.8.0"
+    implementation 'com.braintreepayments.api:drop-in:5.2.1'
+    implementation('com.paypal.checkout:android-sdk:0.2.0')
+    implementation "com.adyen.checkout:ideal-ui:3.8.0"
+    implementation "com.adyen.checkout:card-ui:3.8.0"
+    implementation "com.adyen.checkout:redirect:3.8.0"
+    implementation ("com.squareup.okhttp3:okhttp:4.8.1"){
+        force = true //API 19 support
+    }
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.6.0'
+    implementation "com.jakewharton:butterknife:8.8.1"
+
 
 
 
