--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,12 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+        kotlinOptions {
+            jvmTarget = "1.8"
+        }
     }
     dataBinding{
         enabled true
@@ -44,7 +49,6 @@ android {
 
 dependencies {
 
-    implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
 
     //noinspection GradleCompatible
@@ -64,6 +68,12 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.fragment:fragment-ktx:1.3.2'
+    implementation 'com.google.android.material:material:1.0.0'
+
+    implementation 'androidx.fragment:fragment-ktx:1.3.5'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation 'com.github.aakira:expandable-layout:1.6.0@aar'
     implementation 'com.android.support:design:30.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
@@ -79,20 +89,24 @@ dependencies {
     android.defaultConfig.vectorDrawables.useSupportLibrary = true
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation "io.reactivex.rxjava2:rxjava:2.1.9"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
     implementation "io.reactivex.rxjava2:rxkotlin:2.2.0"
     implementation "de.hdodenhof:circleimageview:3.1.0"
-    implementation 'com.jakewharton.rxbinding2:rxbinding-kotlin:2.1.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-kotlin:2.2.0'
     //noinspection GradleDependency
-    implementation "com.google.android.gms:play-services-wallet:16.0.1"
+    implementation 'com.google.android.gms:play-services-wallet:18.1.3'
     def billing_version = "3.0.0"
     implementation 'com.android.support:multidex:1.0.3'
     //noinspection GradleDependency
     implementation "com.android.billingclient:billing:$billing_version"
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
+    implementation 'com.firebaseui:firebase-ui-database:7.2.0'
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-core:19.0.0'
+    implementation 'com.google.firebase:firebase-database:20.0.0'
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
+    implementation 'com.ouattararomuald:slider-picasso:3.0.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.tfcporciuncula:phonemoji:1.0.0'
     //Country Picker
